--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ textarea {
 
   textarea {
       height: 100px;
+      min-height: 50px;
   }
   
   button {
@@ -167,7 +168,7 @@ h2 {
     display: flex;
 }
 
-.about h3 {
+h3 {
     font-size: 40px;
     font-weight: bold;
     color: gray;
@@ -196,4 +197,14 @@ h2 {
 .skills {
     border-right: gray solid 3px;
     margin-right: 40px;
+}
+
+#services  > ul {
+    list-style: circle;
+}
+
+#services ul li {
+    font-size: 25px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
