--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ h3 {
     font-size: 40px;
     font-weight: bold;
     color: gray;
+    margin-top: 20px;
 }
 
 .about > div {
@@ -231,6 +232,86 @@ h3 {
     font-size: 25px;
     margin-top: 20px;
     margin-left: 20px;
+}
+
+.ring
+{
+    margin: 150px auto;
+  transform:translate(-50%,-50%);
+  width:150px;
+  height:150px;
+  background:transparent;
+  border:3px solid #3c3c3c;
+  border-radius:50%;
+  text-align:center;
+  line-height:150px;
+  font-family:sans-serif;
+  font-size:20px;
+  color: red;
+  letter-spacing:4px;
+  text-transform:uppercase;
+  text-shadow:0 0 10px gray;
+  box-shadow:0 0 20px rgba(0,0,0,.5);
+}
+.ring:before
+{
+  content:'';
+  position:absolute;
+  top:-3px;
+  left:-3px;
+  width:100%;
+  height:100%;
+  border:3px solid transparent;
+  border-top:3px solid red;
+  border-right:3px solid red;
+  border-radius:50%;
+  animation:animateC 2s linear infinite;
+}
+.ring span
+{
+  display:block;
+  position:absolute;
+  top:calc(50% - 2px);
+  left:50%;
+  width:50%;
+  height:4px;
+  background:transparent;
+  transform-origin:left;
+  animation:animate 2s linear infinite;
+}
+.ring span:before
+{
+  content:'';
+  position:absolute;
+  width:16px;
+  height:16px;
+  border-radius:50%;
+  background: orange;
+  top:-6px;
+  right:-8px;
+  box-shadow:0 0 20px gray;
+}
+@keyframes animateC
+{
+  0%
+  {
+    transform:rotate(0deg);
+  }
+  100%
+  {
+    transform:rotate(360deg);
+  }
+}
+@keyframes animate
+{
+  0%
+  {
+    transform:rotate(45deg);
+  }
+  100%
+  {
+    transform:rotate(405deg);
+  }
 }
 
 @media screen and (max-width:1140px) {
