--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,12 @@ body {
 }
 
 .light {
-    background-color: white;
+    background-color: #171717;
 }
 
 .dark-text {
     color: black;
+    font-size: 100px;
 }
 
 .filter {
