--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .light {
-    background-color: #171717;
+    background-color: black;
 }
 
 .dark-text {
@@ -39,7 +39,6 @@ ul {
 nav {
     display: flex;
     background-color: #353436;
-    box-shadow: 0px 1px 15px gray;
     width: 100%;
     position: sticky;
     top: 0px;
